# opencode-specite

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
.specite/templates/: PLAN.md
assets/agents/: phase-executor.md  plan-creator.md  web-researcher.md
assets/command_prompts/: exec.md  iter.md  plan.md  post.md  spec.md
assets/commands/: exec.md  iter.md  plan.md  post.md  spec.md
assets/subagent_prompts/: create-plan.md  exec-phase.md  research.md
assets/templates/: SPEC.md
npm/: install.mjs  package-lock.json  package.json
src/: assets.rs  error.rs  init.rs  iterations.rs  lib.rs  main.rs  project.rs  prompts.rs
tests/: cli_smoke.rs
