[package]
name = "specite"
version = "0.1.0"
description = "Spec-driven iterative development workflow companion CLI for OpenCode"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[[bin]]
name = "specite"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1"
pathdiff = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
